# documents-llm

./: .env-ollama  README.md  doc_app.py  pyproject.toml
documents_llm/: extract.py  invoice.py  product.py  productDict.py  st_helpers.py  system_message.py  tool.py
