[tool.poetry]
name = "documents-llm"
version = "0.1.0"
description = "Scripts to analyze documents using LLMs"
authors = ["Vincent Grégoire <vincent@codes.finance>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.14.3"
langchain = "^0.3.13"
rich = "^13.7.1"
python-dotenv = "^1.0.1"
langchain-openai = "^0.2.14"
pypdf = "^4.1.0"
tiktoken = "^0.7.0"
streamlit = "^1.32.2"
langchain-chroma = "^0.1.4"
langchain-community = "^0.3.13"
langchain-ollama = "^0.2.2"
sentence-transformers = "^3.3.1"
faiss-cpu = "^1.9.0.post1"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
